# reticulumPi

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/nomadnet/pages/: help.mu  index.mu
config/reticulum/: config.example  config.minimal
config/reticulumpi/: config.example.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: install-layout.md
plugins/: heartbeat_announce.py  message_echo.py  system_monitor.py
scripts/: bootstrap.sh  nomadnet-tui.sh  update.sh
src/reticulumpi/: __init__.py  app.py  cli.py  config.py  event_bus.py  events.py  identity_manager.py  plugin_base.py  plugin_loader.py  remote_client.py
src/reticulumpi/builtin_plugins/: __init__.py  alert_system.py  emergency_broadcast.py  example_plugin.py  file_transfer.py  info_bot.py  mesh_telemetry.py  meshchat_server.py  message_echo.py  network_map.py  nomadnet_server.py  remote_control.py  sensor_framework.py  system_monitor.py  web_dashboard.py
systemd/: reticulumpi.service  rnsd.service
tests/: conftest.py  test_alert_system.py  test_app.py  test_cli.py  test_config.py  test_config_validation.py  test_emergency_broadcast.py  test_event_bus.py  test_file_transfer.py  test_identity_manager.py  test_info_bot.py  test_mesh_telemetry.py  test_meshchat_server.py  test_message_echo.py  test_network_map.py  test_nomadnet_server.py  test_plugin_base.py  test_plugin_loader.py  test_remote_client.py  test_remote_control.py  test_sensor_framework.py  test_web_dashboard.py
(+11 files in other folders)
