[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reticulumpi"
version = "0.2.0"
description = "An extensible Reticulum network node for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "rns>=1.1.0,<2.0",
    "lxmf>=0.9.0,<1.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
nomadnet = [
    "nomadnet",
]
dashboard = [
    "aiohttp>=3.9,<4.0",
]
lora = [
    "rnodeconf",
]
sensors = [
    "smbus2>=0.4",
    "RPi.GPIO>=0.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[project.scripts]
reticulumpi = "reticulumpi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a real Reticulum instance",
]
